k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rms-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: rms.ruhuna.ac.lk # Production Domain
    http:
      paths:
      # 1. API Traffic -> Backend Service
      - path: /api/?(.*)
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 3000
              
      # 2. Admin Traffic -> Admin Frontend Service
      - path: /admin/?(.*)
        pathType: Prefix
        backend:
          service:
            name: admin-frontend-service
            port:
              number: 80
              
      # 3. Grafana Dashboard -> Grafana Service
      - path: /grafana/?(.*)
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 3000

      # 4. Default Traffic -> Student Frontend Service
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: student-frontend-service
            port:
              number: 80
